iac/provider-okd/manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: e2b
  labels:
    app.kubernetes.io/part-of: e2b
